# MDE4QML

./: README.md
codegen_template/: codegen.py
experiments/creditcard_fraud/: generated.py  generated_modified.py  instance_model.json  pyproject.toml
experiments/creditcard_fraud/goal/: main.py
metamodels/: qpl.ecore  qpl.json
